--- a/Index.html
+++ b/Index.html
@@ -27,5 +27,25 @@
             </a> 
                 <h3>About me</h3>
                 <p> Hey, I'm Jivana, 25 years old and currently living in Hamburg, Germany. Most recently I worked as a UX/UI designer in a design agency. Since May I'm also learning important basics of web development in a bootcamp for web development, so I can implement my designs in the future. </p>
+
+                <a>
+                    <h3>CV</h3>
+                    <br>ai 2023 - Heute </br>
+                    <br> Studentin Web Development </br>
+                    <br> neuefische | Hamburg </br>
+                    <br></br>
+                    <br> Januar 2022 - April 2023 </br>
+                    <br> Junior UX/UI Designer </br>
+                    <br> Peter Schmidt Group | Hamburg </br>
+                    <br></br>
+                    <br> August 2019 - Januar 2022 </br>
+                    <br> Ausbildung Mediengestaltung Digital & Print </br>
+                    <br> Peter Schmidt Group | Hamburg </br>
+                </a>
+
+        <Footer>
+            <p> Impressum</p>
+        </Footer>
+
 </body>
 </html>
