CV switch to english

--- a/Index.html
+++ b/Index.html
@@ -30,16 +30,16 @@
 
                 <a>
                     <h3>CV</h3>
-                    <br>ai 2023 - Heute </br>
-                    <br> Studentin Web Development </br>
+                    <br> May 2023 - Today </br>
+                    <br> Student web development </br>
                     <br> neuefische | Hamburg </br>
                     <br></br>
-                    <br> Januar 2022 - April 2023 </br>
-                    <br> Junior UX/UI Designer </br>
+                    <br> January 2022 - April 2023 </br>
+                    <br> Junior UX/UI designer </br>
                     <br> Peter Schmidt Group | Hamburg </br>
                     <br></br>
-                    <br> August 2019 - Januar 2022 </br>
-                    <br> Ausbildung Mediengestaltung Digital & Print </br>
+                    <br> August 2019 - January 2022 </br>
+                    <br> Apprenticeship digital and print media designer </br>
                     <br> Peter Schmidt Group | Hamburg </br>
                 </a>
 
