--- a/Index.html
+++ b/Index.html
@@ -4,48 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Stylesheet" href="./CSS/styles.css"7>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <title>personal-website</title>
 </head>
 <body>
-     <h1>Jivana Lipsewers</h1>
-        <a Contact ></a>
-        <a Biography ></a>
-            <figure>
-                <img src="Thats_Me" alt="Picture of me" />
-                <figcaption>
-                    Thats me
-                </figcaption>
-            </figure>
+	<header>
+		<nav class="navigation">
+            <H1>Jivana Lipsewers</H1>
+			<a href="#">Über mich</a>
+			<a href="#">Kontakt</a>
+        </nav>
+	</header>
+	<main>
+		<section1>
+            <h2>Über mich</h2>
+            <div class="ÜberMich">
+            <p>Moin, ich bin Jivana, gerne auch Ive genannt und gebürtige Paderbornerin. 2019 verschlug es mich in das schöne Hamburg, um in der Medienbranche Fuß zu fassen. 
+                2019 startete ich so mit einer Ausbildung zur Mediengestalterin für Digital und Print, mit der Fachrichtung Konzeption und Visualisierung und wurde während meiner Ausbildungszeit fester Bestandteil des Digital-Teams mit dem Schwerpunkt UX/UI Design. Seit meinem erfolgreichen Ausbildungsabschluss im Januar 2022, arbeitete ich Vollzeit als Junior UX/UI Designerin in einer Designagentur, bis ich im Mai mein Bootcamp für Web Development startete um meine Designs in Zukunft auch umsetzen, sowie betreuen zu können.
+            </p>
+            <img src="/Images/Jivana.png"alt="Hier befindet sich ein Bild von mir."class=profile_image>    
+            </div>
+        </section1>
+        <section2 class="container">
+            <h2>Mein Weg</h2>
+            <p class="point_big">
+                <p class="label">Mai 2023 - Heute</p> 
+                <p class="bodycopy_bold">Studentin Web Development</p>
+                <p class="bodycopy_regular">neuefische | Hamburg</p>
+            <br>
+            <div class="container">
+                <p class="point_small"></p>
+                <p class="label">Januar 2022 - April 2023</p> 
+                <p class="bodycopy_bold">Junior UX/UI Designerin</p>
+                <p class="bodycopy_regular">Peter Schmidt Group | Hamburg</p>
+            </div>
+            <br>
+            <div class="container">
+                <p class="point_small"></p>
+                <p class="label">August 2019 - Januar 2022</p> 
+                <p class="bodycopy_bold">Ausbildung Mediengestaltung Digital & Print</p>
+                <p class="bodycopy_regular">Peter Schmidt Group | Hamburg</p>
+            </div>
+                <br>
+            <p class="point_small"></p>
+                <p class="label">Juni 2018 - Juli 2019</p> 
+                <p class="bodycopy_bold">Gestalterin für visuelles Marketing</p>
+                <p class="bodycopy_regular">Peek & Cloppenburg | Münster</p>
+            <br>
+            <p class="point_small"></p>
+                <p class="label">Juni 2017 - Mai 2018</p> 
+                <p class="bodycopy_bold">Fachabitur Gestaltung</p>
+                <p class="bodycopy_regular">Berufskolleg Senne | Bielefeld</p>
+        </section2>
+        <section3>
+            <h3>Meine Programmkenntnisse</h3>
+            <p> Hier einige Programme aufgeführt, die bei meiner täglichen Arbeit als UX/UI Designerin nicht fehlen dürfen.
+            </p>
+         <div class="icon_padding">
+            <img src="/Images/Figma.png"alt="Bild Programm Figma" height="42px" width="42px">
+            <img src="/Images/Sketch.png"alt="Bild Programm Sketch" height="42px" width="42px">
+            <img src="/Images/CreativeCloud.png"alt="Bild Programm Adobe Creative Cloud" height="42px" width="42px">
+            <img src="/Images/PowerPoint.png"alt="Bild Programm Microsoft PowerPoint" height="42px" width="42px">
+            <img src="/Images/Mural.png"alt="Bild Programm Mural" height="42px" width="42px">
+            <img src="/Images/InVision.png"alt="Bild Programm InVision" height="42px" width="42px">
+            <img src="/Images/MSTeams.png"alt="Bild Programm Microsoft Teams" height="42px" width="42px">
+            <img src="/Images/Confluence.png"alt="Bild Programm Confluence" height="42px" width="42px">
+            <img src="/Images/Jira.png"alt="Bild Programm Jira" height="42px" width="42px">
+         </div>
 
-            <h2>
-                My Number 
-            </h2>
 
-            <href="https://github.com/JivanaLipsewers">Github</href>
-            <href="https://www.linkedin.com/in/jivana-lipsewers-483818196/">LinkedIn</href>
-
-            </a> 
-                <h3>About me</h3>
-                <p> Hey, I'm Jivana, 25 years old and currently living in Hamburg, Germany. Most recently I worked as a UX/UI designer in a design agency. Since May I'm also learning important basics of web development in a bootcamp for web development, so I can implement my designs in the future. </p>
-
-                <a>
-                    <h3>CV</h3>
-                    <br> May 2023 - Today </br>
-                    <br> Student web development </br>
-                    <br> neuefische | Hamburg </br>
-                    <br></br>
-                    <br> January 2022 - April 2023 </br>
-                    <br> Junior UX/UI designer </br>
-                    <br> Peter Schmidt Group | Hamburg </br>
-                    <br></br>
-                    <br> August 2019 - January 2022 </br>
-                    <br> Apprenticeship digital and print media designer </br>
-                    <br> Peter Schmidt Group | Hamburg </br>
-                </a>
-
-        <Footer>
-            <p> Impressum</p>
-        </Footer>
-
+        </section3>
+	</main>
+	<footer>
+        <div class="footer">
+            <p>Jivana Lipsewers</p>
+            <p>&copy; 2023 Alle Rechte vorbehalten</p>
+          </div>
+	</footer>
 </body>
 </html>
